// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper renders correctly with all selected 1`] = `
<DocumentFragment>
  .css-i28g32-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 0;
}

.css-i28g32-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

.css-i28g32-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.css-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.css-tp2if-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.css-32ydu7-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.css-32ydu7-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-16ebxbi-StyledText-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.css-fkq8r-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.css-fkq8r-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
  width: 100%;
}

.css-sdib28-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

<div
    class="css-i28g32-StyledContainer e19ft7rb0"
  >
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-tp2if-StyledContainer-StyledBullet e11loam60"
      >
        <svg
          class="css-32ydu7-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16.7045 4.15347C17.034 4.4045 17.0976 4.87509 16.8466 5.20457L8.84657 15.7046C8.71541 15.8767 8.51627 15.9838 8.30033 15.9983C8.08439 16.0129 7.87271 15.9334 7.71967 15.7804L3.21967 11.2804C2.92678 10.9875 2.92678 10.5126 3.21967 10.2197C3.51256 9.92682 3.98744 9.92682 4.28033 10.2197L8.17351 14.1129L15.6534 4.29551C15.9045 3.96603 16.3751 3.90243 16.7045 4.15347Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="css-fkq8r-StyledLine e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-tp2if-StyledContainer-StyledBullet e11loam60"
      >
        <svg
          class="css-32ydu7-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16.7045 4.15347C17.034 4.4045 17.0976 4.87509 16.8466 5.20457L8.84657 15.7046C8.71541 15.8767 8.51627 15.9838 8.30033 15.9983C8.08439 16.0129 7.87271 15.9334 7.71967 15.7804L3.21967 11.2804C2.92678 10.9875 2.92678 10.5126 3.21967 10.2197C3.51256 9.92682 3.98744 9.92682 4.28033 10.2197L8.17351 14.1129L15.6534 4.29551C15.9045 3.96603 16.3751 3.90243 16.7045 4.15347Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="css-fkq8r-StyledLine e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-sdib28-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with animation 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.css-i28g32-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 0;
}

.css-i28g32-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

.css-i28g32-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.css-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.css-tp2if-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.css-32ydu7-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.css-32ydu7-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-16ebxbi-StyledText-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.css-fkq8r-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.css-fkq8r-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
  width: 100%;
}

.css-sdib28-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.css-12p7rjs-StyledLine-loadingStyle {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.css-12p7rjs-StyledLine-loadingStyle::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.css-7y11y9-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

<div
    class="css-i28g32-StyledContainer e19ft7rb0"
  >
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-tp2if-StyledContainer-StyledBullet e11loam60"
      >
        <svg
          class="css-32ydu7-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16.7045 4.15347C17.034 4.4045 17.0976 4.87509 16.8466 5.20457L8.84657 15.7046C8.71541 15.8767 8.51627 15.9838 8.30033 15.9983C8.08439 16.0129 7.87271 15.9334 7.71967 15.7804L3.21967 11.2804C2.92678 10.9875 2.92678 10.5126 3.21967 10.2197C3.51256 9.92682 3.98744 9.92682 4.28033 10.2197L8.17351 14.1129L15.6534 4.29551C15.9045 3.96603 16.3751 3.90243 16.7045 4.15347Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="css-fkq8r-StyledLine e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-sdib28-StyledContainer-StyledBullet e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="css-12p7rjs-StyledLine-loadingStyle e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with default props 1`] = `
<DocumentFragment>
  .css-i28g32-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 0;
}

.css-i28g32-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

.css-i28g32-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.css-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.css-sdib28-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.css-16ebxbi-StyledText-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.css-n9n5oq-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.css-n9n5oq-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
}

.css-7y11y9-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

<div
    class="css-i28g32-StyledContainer e19ft7rb0"
  >
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-sdib28-StyledContainer-StyledBullet e11loam60"
      >
        1
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="css-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="css-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with selected prop 1`] = `
<DocumentFragment>
  .css-i28g32-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 0;
}

.css-i28g32-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

.css-i28g32-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.css-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.css-tp2if-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.css-32ydu7-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.css-32ydu7-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-16ebxbi-StyledText-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.css-fkq8r-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.css-fkq8r-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
  width: 100%;
}

.css-sdib28-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.css-n9n5oq-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.css-n9n5oq-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
}

.css-7y11y9-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

<div
    class="css-i28g32-StyledContainer e19ft7rb0"
  >
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-tp2if-StyledContainer-StyledBullet e11loam60"
      >
        <svg
          class="css-32ydu7-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16.7045 4.15347C17.034 4.4045 17.0976 4.87509 16.8466 5.20457L8.84657 15.7046C8.71541 15.8767 8.51627 15.9838 8.30033 15.9983C8.08439 16.0129 7.87271 15.9334 7.71967 15.7804L3.21967 11.2804C2.92678 10.9875 2.92678 10.5126 3.21967 10.2197C3.51256 9.92682 3.98744 9.92682 4.28033 10.2197L8.17351 14.1129L15.6534 4.29551C15.9045 3.96603 16.3751 3.90243 16.7045 4.15347Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="css-fkq8r-StyledLine e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-sdib28-StyledContainer-StyledBullet e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="css-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with small size 1`] = `
<DocumentFragment>
  .css-7czxf9-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 8px;
}

.css-7czxf9-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

.css-7czxf9-StyledContainer .e19ft7rb1 {
  height: 2px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.css-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.css-vvq8bc-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 24px;
  height: 24px;
  font-size: 14px;
  margin-top: 4px;
}

.css-2seue4-StyledText-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.css-n9n5oq-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.css-n9n5oq-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
}

.css-pqu96v-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 24px;
  height: 24px;
  font-size: 14px;
  margin-top: 4px;
}

<div
    class="css-7czxf9-StyledContainer e19ft7rb0"
  >
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-vvq8bc-StyledContainer-StyledBullet e11loam60"
      >
        1
      </div>
      <span
        class="e19ft7rb3 css-2seue4-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="css-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-pqu96v-StyledContainer-StyledBullet e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb3 css-2seue4-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="css-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-pqu96v-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 css-2seue4-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Stepper renders correctly with step number in row 1`] = `
<DocumentFragment>
  .css-14umgav-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0 8px;
  gap: 8px;
}

.css-14umgav-StyledContainer .e19ft7rb4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  gap: 8px;
  white-space: nowrap;
}

.css-14umgav-StyledContainer .e19ft7rb1 {
  height: 4px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.css-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.css-sdib28-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

.css-16ebxbi-StyledText-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 8px;
}

.css-n9n5oq-StyledLine {
  border-radius: 4px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 4px;
  background-color: #e9eaeb;
  position: relative;
}

.css-n9n5oq-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 4px;
  background-color: #8c40ef;
}

.css-7y11y9-StyledContainer-StyledBullet {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
  margin-top: 0;
}

<div
    class="css-14umgav-StyledContainer e19ft7rb0"
  >
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-sdib28-StyledContainer-StyledBullet e11loam60"
      >
        1
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 1
        </span>
      </span>
    </div>
    <div
      class="css-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        2
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 2
        </span>
      </span>
    </div>
    <div
      class="css-n9n5oq-StyledLine e19ft7rb1"
    />
    <div
      class="css-64yl8v-StyledStepContainer e19ft7rb4"
    >
      <div
        class="e19ft7rb2 css-7y11y9-StyledContainer-StyledBullet e11loam60"
      >
        3
      </div>
      <span
        class="e19ft7rb3 css-16ebxbi-StyledText-StyledText e13y3mga0"
      >
        <span>
          Step 3
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
